<resources>
    <string name="app_name">ForumITSCH</string>

    <string name="texto01">Bienvenido</string>
    <string name="texto02">Registro de usuario</string>
    <string name="texto03">Recuperar contraseña</string>
    <string name="texto04">Título</string>
    <string name="texto05">Autor</string>
    <string name="texto06">Fecha</string>
    <string name="texto07">Actualizar información"</string>
    <string name="texto08">Actualizar</string>
    <string name="texto09">Eliminar mi cuenta</string>
    <string name="texto10">Subir</string>
    <string name="texto11">Regresar</string>>
    <string name="texto12">Categoria</string>
    <string name="texto13">Descripción</string>
    <string name="texto14">Rol:</string>
    <string name="hint01">Email</string>
    <string name="hint02">Contraseña</string>
    <string name="hint03">Nombre</string>
    <string name="hint04">Apellidos</string>
    <string name="hint05">Carrera:</string>
    <string name="hint06">Cargando...</string>
    <string name="hint07">Ingrese el titulo</string>
    <string name="hint08">Ingrese la descripcion</string>
    <string name="hint09">Ingrese la categoria</string>
    <string name="boton01">Ingresar</string>
    <string name="boton02">Olvidé mi contraseña</string>
    <string name="boton03">No estoy registrado</string>
    <string name="boton04">Registrarme</string>
    <string name="boton05">Ya estoy registrado</string>
    <string name="boton06">Cerrar sesión</string>
    <string name="boton07">Recuperar contraseña</string>
    <string name="boton08">Regresar</string>
    <string name="boton09">Eliminar cuenta</string>

    <string-array name="carreras">
        <item>Bioquímica</item>
        <item>Gestión</item>
        <item>Industrial</item>
        <item>Mecatrónica</item>
        <item>Nanotecnología</item>
        <item>Sistemas</item>
        <item>TICs</item>
    </string-array>

    <string-array name="roles">
        <item>comun</item>
        <item>publicador</item>
        <item>admin</item>
    </string-array>

</resources>