<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_marginTop="80dp"
            android:id="@+id/logo_login"
            android:layout_gravity="center"
            android:src="@drawable/logo_forum"
            android:transitionName="logo_trans"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto01"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/rojo_c3"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint01"
            app:hintTextColor="@color/gris_5e"
            app:boxStrokeColor="@color/naranja"
            android:layout_marginTop="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint02"
            app:hintTextColor="@color/gris_5e"
            app:boxStrokeColor="@color/naranja"
            android:layout_marginBottom="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOlvidar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/boton02"
                android:textColor="@color/gris_5e"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnIngresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boton01"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:backgroundTint="@color/rojo_c3"
                android:textAllCaps="true"
                android:layout_marginTop="20sp"
                app:layout_constraintTop_toBottomOf="@+id/btnOlvidar"
                tools:ignore="MissingConstraints"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/boton03"
                android:textColor="@color/gris_5e"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</ScrollView>