<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarArticulo">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <ImageButton
            android:id="@+id/btnRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_regresar"
            android:background="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:tint="@color/rojo_c3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/actualizarImagen"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/subir_imagen" />

            <EditText
                android:id="@+id/actualizarTitulo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/border"
                android:gravity="start|center_vertical"
                android:hint="@string/hint07"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="@color/rojo_c3" />

            <EditText
                android:id="@+id/actualizarDesc"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/border"
                android:gravity="start|center_vertical"
                android:hint="@string/hint08"
                android:padding="16dp"
                android:textColor="@color/rojo_c3" />

            <EditText
                android:id="@+id/actualizarCat"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/border"
                android:gravity="start|center_vertical"
                android:maxLines="1"
                android:hint="@string/hint09"
                android:padding="16dp"
                android:textColor="@color/rojo_c3" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/texto08"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                android:backgroundTint="@color/rojo_c3"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>