<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:background="@color/white"
    tools:context=".RecuperarPass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_forum"
            android:transitionName="logo_trans"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Recuperar contraseña"
            android:layout_marginBottom="10dp"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/rojo_c3"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailPass"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint01"
            app:hintTextColor="@color/gris_5e"
            app:boxStrokeColor="@color/naranja">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRecuperar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:text="@string/texto03"
            android:textStyle="bold"
            android:backgroundTint="@color/rojo_c3"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/emailPass"
            />

        <Button
            android:id="@+id/btnRegresarP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/texto11"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/gris_5e"/>

    </LinearLayout>
</ScrollView>